--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Mad Macaques Press
 subtitle: Comics etc.
-description:
+description: Comics, Illustration, Design, Games
 author: Donna Almendrala
 language: en_us
 timezone: America/Los_Angeles
