adding gene drive comic

--- a/themes/phantom/_config.yml
+++ b/themes/phantom/_config.yml
@@ -2,6 +2,7 @@
 menu:
   Home: /
   Store: /store
+  Gene Drive to the Rescue: /Gene-Drive-to-the-Rescue
   Archives: /archives
 
 # Logo Image Source
