added Comics page

--- a/themes/phantom/_config.yml
+++ b/themes/phantom/_config.yml
@@ -2,7 +2,7 @@
 menu:
   Home: /
   Store: /store
-  Gene Drive to the Rescue: /Gene-Drive-to-the-Rescue
+  Comics: /comics
   Archives: /archives
 
 # Logo Image Source
