--- a/themes/phantom/_config.yml
+++ b/themes/phantom/_config.yml
@@ -1,7 +1,7 @@
 # Header
 menu:
   Home: /
-  Store: /store
+  Store: https://squareup.com/store/mad-macaques-press/
   Comics: /comics
   Archives: /archives
 
