created illustration page and added Chimpcy

--- a/themes/phantom/_config.yml
+++ b/themes/phantom/_config.yml
@@ -3,6 +3,7 @@ menu:
   Home: /
   Store: https://squareup.com/store/mad-macaques-press/
   Comics: /comics
+  Illustration: /illustration
   Archives: /archives
 
 # Logo Image Source
