updating store url

--- a/themes/phantom/_config.yml
+++ b/themes/phantom/_config.yml
@@ -1,7 +1,7 @@
 # Header
 menu:
   Home: /
-  Store: https://squareup.com/store/mad-macaques-press/
+  Store: https://store.madmacaques.com/
   Comics: /comics
   Illustration: /illustration
   Archives: /archives
