added birb watching post and updated favicon, logo, and illustration page

--- a/themes/phantom/_config.yml
+++ b/themes/phantom/_config.yml
@@ -10,7 +10,7 @@ menu:
 logo_src: /images/logo.svg
 
 # Theme Main Subtitle
-subtitle_main: Comics | Illustration | Design
+subtitle_main: Comics · Illustration · Design
 
 # Theme Secondary subtitle
 susbtitle_secondary:
