--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "hexo": {
     "version": "3.4.4"
   },
+  "scripts": {
+    "test": "./deploy.sh"
+  },
   "dependencies": {
     "hexo": "^3.2.2",
     "hexo-deployer-git": "^0.2.0",
