Fix link, update packages

--- a/themes/phantom/_config.yml
+++ b/themes/phantom/_config.yml
@@ -45,7 +45,7 @@ google_analytics:
 
 # Social Accounts
 twitter_url: https://twitter.com/madmacaques?lang=en
-instagram_url: https://www.instagram.com/donnamata
+instagram_url: https://www.instagram.com/madmacaques
 github_url: https://github.com/donnasaur
 email_url: mailto:donna@madmacaques.com
 rss_url: \#
