--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: Comics etc.
 description: Comics, Illustration, Design, Games
 author: Donna Almendrala
 language: en_us
-timezone: America/Los_Angeles
+# timezone: America/Los_Angeles
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
