updating site title

--- a/themes/phantom/_config.yml
+++ b/themes/phantom/_config.yml
@@ -10,10 +10,10 @@ menu:
 logo_src: /images/logo.svg
 
 # Theme Main Subtitle
-subtitle_main: Comics, Illustration & Design
+subtitle_main: Portfolio & Blog
 
 # Theme Secondary subtitle
-susbtitle_secondary:
+susbtitle_secondary: Making comics + playing tabletop games + scavenging food
 
 # Footer About Section
 about_footer: Donna Almendrala is a Bay Area cartoonist who likes to draw apes, submarines and food, just to name a few. She is an avid proponent of board games and RPGs. She also specializes in illustration, web design and development, print production, and graphic design.
