changed store link

--- a/themes/phantom/_config.yml
+++ b/themes/phantom/_config.yml
@@ -1,7 +1,7 @@
 # Header
 menu:
   Home: /
-  Store: https://store.madmacaques.com/
+  Store: https://mad-macaques-press-177848.square.site/
   Comics: /comics
   Illustration: /illustration
   Archives: /archives
