Revert "changed store link"
This reverts commit fcf05fa6da469e67c64840a3fa3f8f54e6601e22.

--- a/themes/phantom/_config.yml
+++ b/themes/phantom/_config.yml
@@ -1,7 +1,7 @@
 # Header
 menu:
   Home: /
-  Store: https://mad-macaques-press-177848.square.site/
+  Store: https://store.madmacaques.com/
   Comics: /comics
   Illustration: /illustration
   Archives: /archives
